# src/ApiDocs/swagger.json
@@ -77,24 +77,12 @@
         }
       }
     },
-    "/basket/": {
+    "/basket/add": {
       "post": {
         "tags": [
           "Basket"
         ],
         "summary": "Add item to basket",
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "Basket"
-        ],
-        "summary": "Delete basket",
         "description": "",
         "responses": {
           "200": {
@@ -118,6 +106,20 @@
             "type": "string"
           }
         ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/basket/": {
+      "delete": {
+        "tags": [
+          "Basket"
+        ],
+        "summary": "Delete basket",
+        "description": "",
         "responses": {
           "200": {
             "description": "OK"
